without Screen package

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,6 +127,7 @@ Responsibilities
     <string name="menu_search">Search</string>
     <string name="register_success_popup">Registered successfully.\nVerification email has been sent.\nPlease verify email.</string>
     <string name="recheck_gender">To save your changes, please check/recheck your GENDER.</string>
+    <string name="end_enter_data"><![CDATA[verify Your Account\n Enter your Email & Password]]></string>
 
     <string-array name="spinerViewPeople">
         <item>Default</item>
